scrollbar fix (#880)
* scrollbar fix

* webkit support

* firefox fox

* more chrome coverage

* removing overflow declarations from the table component

* don't think these are necessary

* setting y&x overflow on table component

* trying to fix weird scroll behaviour on chrome

* remove comments

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,13 @@
 	height: 100%;
 	position: relative;
 }
+* {
+	scroll-behavior: smooth;
+  }
+
+html {
+	scrollbar-width: none;
+}
 
 body {
 	font-family: 'AkkuratLLWeb-Regular', -apple-system, BlinkMacSystemFont, sans-serif;
@@ -51,8 +58,17 @@ body {
 	margin: 0;
 	position: relative;
 	min-height: 100vh;
-	scroll-behavior: smooth;
 	font-size: 12px;
+
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+	overflow: auto;
+}
+
+::-webkit-scrollbar {
+	display: none;
+	width: 0;
+	height: 0;
 }
 
 ul {
